Improve vhost template
Add ServerAlias and use a variable for ServerAdmin.

--- a/template-vhost.conf
+++ b/template-vhost.conf
@@ -1,6 +1,7 @@
 <VirtualHost *:80>
-	ServerAdmin contact@example.com
+	ServerAdmin contact@{local_domain}
 	ServerName {local_domain}
+	# ServerAlias {local_domain}
 
 	DocumentRoot /home/{username}/{projects_directory}/{vhost_directory}
 	<Directory /home/{username}/{projects_directory}/{vhost_directory}>
@@ -17,11 +18,9 @@
 	CustomLog /var/log/apache2/{vhost_directory}.access.log combined
 	ServerSignature On
 
-	<IfModule !mod_php7.c>
 	<IfModule proxy_fcgi_module>
 	<FilesMatch ".+\.ph(ar|p|tml)$">
 		SetHandler "proxy:unix:/run/php/php7.3-fpm.{vhost_directory}.sock|fcgi://localhost"
 	</FilesMatch>
-	</IfModule>
 	</IfModule>
 </VirtualHost>
