Fix missing domain name bug in vhost template
The name of the variable that holds the domain name has changed from
local_domain to domain in the mkwebsite.sh script.
This change was not made in the template files.

--- a/template-vhost-symfony.conf
+++ b/template-vhost-symfony.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-	ServerAdmin contact@{local_domain}
-	ServerName {local_domain}
-	# ServerAlias {local_domain}
+	ServerAdmin contact@{domain}
+	ServerName {domain}
+	# ServerAlias {domain}
 
 	DocumentRoot /home/{username}/{projects_directory}/{vhost_directory}/public
 	<Directory /home/{username}/{projects_directory}/{vhost_directory}/public>
