--- a/template-vhost.conf
+++ b/template-vhost.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
-	ServerAdmin contact@{local_domain}
-	ServerName {local_domain}
-	# ServerAlias {local_domain}
+	ServerAdmin contact@{domain}
+	ServerName {domain}
+	# ServerAlias {domain}
 
 	DocumentRoot /home/{username}/{projects_directory}/{vhost_directory}
 	<Directory /home/{username}/{projects_directory}/{vhost_directory}>
