--- a/template-subdir-deployer-symfony.conf
+++ b/template-subdir-deployer-symfony.conf
@@ -1,6 +1,7 @@
 Alias /{vhost_directory} /home/{username}/{projects_directory}/{vhost_directory}/current/public
 
 <Directory /home/{username}/{projects_directory}/{vhost_directory}/current/public>
+	Header set Access-Control-Allow-Origin "*"
 	Options Indexes FollowSymLinks MultiViews
 	AllowOverride All
 	Require all granted
