--- a/template-subdir-symfony.conf
+++ b/template-subdir-symfony.conf
@@ -1,6 +1,7 @@
 Alias /{vhost_directory} /home/{username}/{projects_directory}/{vhost_directory}/public
 
 <Directory /home/{username}/{projects_directory}/{vhost_directory}/public>
+	Header set Access-Control-Allow-Origin "*"
 	Options Indexes FollowSymLinks MultiViews
 	AllowOverride All
 	Require all granted
