--- a/template-subdir.conf
+++ b/template-subdir.conf
@@ -1,6 +1,7 @@
 Alias /{vhost_directory} /home/{username}/{projects_directory}/{vhost_directory}
 
 <Directory /home/{username}/{projects_directory}/{vhost_directory}>
+	Header set Access-Control-Allow-Origin "*"
 	Options Indexes FollowSymLinks MultiViews
 	AllowOverride All
 	Require all granted
