--- a/template-vhost-deployer-symfony.conf
+++ b/template-vhost-deployer-symfony.conf
@@ -5,6 +5,7 @@
 
 	DocumentRoot /home/{username}/{projects_directory}/{vhost_directory}/current/public
 	<Directory /home/{username}/{projects_directory}/{vhost_directory}/current/public>
+		Header set Access-Control-Allow-Origin "*"
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		Require all granted
