--- a/template-vhost.conf
+++ b/template-vhost.conf
@@ -5,6 +5,7 @@
 
 	DocumentRoot /home/{username}/{projects_directory}/{vhost_directory}
 	<Directory /home/{username}/{projects_directory}/{vhost_directory}>
+		Header set Access-Control-Allow-Origin "*"
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		Require all granted
