Replace all occurences of `www` in the php fpm pool template
Replace all occurences with the preprocessed variable `{vhost_directory}`.

--- a/template-pool.conf
+++ b/template-pool.conf
@@ -1,6 +1,6 @@
-; Start a new pool named 'www'.
+; Start a new pool named '{vhost_directory}'.
 ; the variable $pool can be used in any directive and will be replaced by the
-; pool name ('www' here)
+; pool name ('{vhost_directory}' here)
 [{vhost_directory}]
 
 ; Per pool prefix
@@ -161,7 +161,7 @@ pm.max_spare_servers = 3
 ;                          pm 'dynamic' and 'ondemand');
 ; Value are updated in real time.
 ; Example output:
-;   pool:                 www
+;   pool:                 {vhost_directory}
 ;   process manager:      static
 ;   start time:           01/Jul/2011:17:53:49 +0200
 ;   start since:          62636
@@ -432,7 +432,7 @@ pm.max_spare_servers = 3
 
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
-;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
+;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f {vhost_directory}@my.domain.com
 ;php_flag[display_errors] = off
 php_admin_value[error_log] = /var/log/fpm-php.$pool.log
 ;php_admin_flag[log_errors] = on
