--- a/template-pool.conf
+++ b/template-pool.conf
@@ -45,8 +45,8 @@ listen = /run/php/php7.4-fpm.$pool.sock
 ; and group can be specified either by name or by their numeric IDs.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = {username}
-listen.group = {username}
+listen.owner = www-data
+listen.group = www-data
 ;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
