Make use of `$domain` variable in the vhost templates
The vhost templates use the `$domain` variable to create the server
admin email address.

--- a/template-vhost-deployer-symfony.conf
+++ b/template-vhost-deployer-symfony.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerAdmin contact@{domain}
+	ServerAdmin {vhost_directory}@{domain}
 	ServerName {domain}
 	# ServerAlias {domain}
 
