--- a/template-pool.conf
+++ b/template-pool.conf
@@ -432,7 +432,7 @@ pm.max_spare_servers = 3
 
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
-;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f {vhost_directory}@my.domain.com
+;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f $pool@{domain}
 ;php_flag[display_errors] = off
 php_admin_value[error_log] = /var/log/fpm-php.$pool.log
 ;php_admin_flag[log_errors] = on
