--- a/template-vhost-symfony.conf
+++ b/template-vhost-symfony.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	ServerAdmin contact@{domain}
+	ServerAdmin {vhost_directory}@{domain}
 	ServerName {domain}
 	# ServerAlias {domain}
 
