Add open_basedir parameter to php fpm pools
To enhance security, the open_basedir parameter makes it possible to
limit access to files of an arbitrary set of directories.

The open_basedir parameter is now configured to give php fpm access to
its own application directory, its own session directory and the system
wide temporary directory.

--- a/template-pool.conf
+++ b/template-pool.conf
@@ -438,3 +438,4 @@ php_admin_value[error_log] = /var/log/fpm-php.$pool.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
 php_admin_value[session.save_path] = /var/lib/php/sessions/$pool
+php_admin_value[open_basedir] = /home/{username}/{projects_directory}/$pool:/tmp:/var/lib/php/sessions/$pool
