--- a/mariadb-backups-conf.sh.dist
+++ b/mariadb-backups-conf.sh.dist
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-backups_directory="~/mariadb-backups"
-login="foo"
+backups_directory="/home/foo/mariadb-backups"
+login="bar"
 password="123"
 server="localhost"
 
