Add the possibility to switch default website
The install-amp.sh script does not disable the original default website
anymore.

Add a script to set the default website.

Add a script to upgrade from previous configuration to new
configuration.
This script os meant to be removed as soon as possible.

Fix missing configuration (ie 'Directory' block) in the default website
vhost file.

--- a/template-default-website.conf
+++ b/template-default-website.conf
@@ -1,4 +1,6 @@
 <VirtualHost *:80>
+	ServerAdmin {vhost_directory}@{domain}
+
 	# The ServerName directive sets the request scheme, hostname and port that
 	# the server uses to identify itself. This is used when creating
 	# redirection URLs. In the context of virtual hosts, the ServerName
@@ -6,10 +8,16 @@
 	# match this virtual host. For the default virtual host (this file) this
 	# value is not decisive as it is used as a last resort host regardless.
 	# However, you must set it for any further virtual host explicitly.
-	#ServerName {domain}
+	ServerName {domain}
+	# ServerAlias {domain}
 
-	ServerAdmin {vhost_directory}@{domain}
 	DocumentRoot /home/{username}/{projects_directory}/{vhost_directory}
+	<Directory /home/{username}/{projects_directory}/{vhost_directory}>
+		Header set Access-Control-Allow-Origin "*"
+		Options Indexes FollowSymLinks MultiViews
+		AllowOverride All
+		Require all granted
+	</Directory>
 
 	# Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
 	# error, crit, alert, emerg.
